platform/external-secrets/resources/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: external-secrets
  annotations:
    # Removing the controller must not cascade-delete future namespace data.
    kustomize.toolkit.fluxcd.io/prune: disabled
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: v1.37
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: v1.37
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: v1.37
