platform/external-secrets/resources/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: external-secrets-controller
  namespace: external-secrets
spec:
  endpointSelector: {}
  ingress:
    - fromEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: '8082'
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: UDP
            - port: '53'
              protocol: TCP
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: '443'
              protocol: TCP
            - port: '6443'
              protocol: TCP
